--- a/DoAnMon/Views/Shared/_Layout.cshtml
+++ b/DoAnMon/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/DoAnMon.styles.css" asp-append-version="true" />
+    <link rel="icon" href="/pics/exam.ico" type="image/x-icon">
 </head>
 <body>
     <header>
