--- a/DoAnMon/Views/ClassRooms/Index.cshtml
+++ b/DoAnMon/Views/ClassRooms/Index.cshtml
@@ -24,3 +24,8 @@
         }
     }   
 </div>
+
+@if (!string.IsNullOrEmpty(ViewBag.StatusMessage))
+{
+    <script>alert('@ViewBag.StatusMessage');</script>
+}
