--- a/DoAnMon/Views/Shared/_Layout1.cshtml
+++ b/DoAnMon/Views/Shared/_Layout1.cshtml
@@ -75,7 +75,8 @@
 									}
 									else
 									{
-										<img src="/Images/@user.UrlAvt" class="img-thumbnail img-fluid" style="width: 122.5px; height: auto; height: 160.13px;" />
+										<img src="/Imgs_avtUser/@user.UrlAvt" class="img-thumbnail img-fluid" style="width: 122.5px; height: auto; height: 160.13px;" onerror="this.onerror=null; this.src='/Images/avatar.jpg';" />
+
 									}
 								</div>
 								<div class="col-md-6" style="margin-left: 0; padding-left: 0; align-items: center; padding-top: 15px;">
