--- a/DoAnMon/Views/ClassRooms/Index.cshtml
+++ b/DoAnMon/Views/ClassRooms/Index.cshtml
@@ -19,7 +19,7 @@
                 <div class="card-bottom">
                     <img class="PNzAWd" aria-hidden="true" src="/Imgs_avtUser/@viewModel.Owner.UrlAvt">
                     <a href="https://lop.com" class="btn btn-primary btn-info btn-custom" target="_blank">Giảng đường</a>
-                    <a href="https://lop.com" class="btn btn-primary btn-info btn-custom" target="_blank" style="margin-top: 10px;">Lớp học</a>
+                    <a asp-action="Details" asp-route-id="@viewModel.ClassRoom.Id" class="btn btn-primary btn-info btn-custom" style="margin-top: 10px;">Lớp học</a>
                 </div>
             </div>
         }
