--- a/DoAnMon/Views/Shared/_Layout1.cshtml
+++ b/DoAnMon/Views/Shared/_Layout1.cshtml
@@ -11,14 +11,14 @@
 	<title>ONLYA</title>
 
 	<!-- BOOTSTRAP STYLES-->
-	<link href="assets/css/bootstrap.css" rel="stylesheet" />
+	<link href="/assets/css/bootstrap.css" rel="stylesheet" />
 	<link rel="stylesheet" href="/assets/css/bootstrap.min.css">
 	<!-- FONTAWESOME STYLES-->
-	<link href="assets/css/font-awesome.css" rel="stylesheet" />
+	<link href="/assets/css/font-awesome.css" rel="stylesheet" />
 	<!--CUSTOM BASIC STYLES-->
-	<link href="assets/css/basic.css" rel="stylesheet" />
+	<link href="/assets/css/basic.css" rel="stylesheet" />
 	<!--CUSTOM MAIN STYLES-->
-	<link href="assets/css/custom.css" rel="stylesheet" />
+	<link href="/assets/css/custom.css" rel="stylesheet" />
 	<!-- GOOGLE FONTS-->
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css' />
 
