--- a/DoAnMon/Views/Shared/_LoginPartial.cshtml
+++ b/DoAnMon/Views/Shared/_LoginPartial.cshtml
@@ -50,32 +50,24 @@
     }
 
 </style>
-
+@{
+    var user = await UserManager.GetUserAsync(User);
+}
 
 <ul class="navbar-nav">
-@if (SignInManager.IsSignedIn(User))
+    @if (SignInManager.IsSignedIn(User) && user != null)
 { 
         <li class="nav-item dropdown">
             @{
-                var user = await UserManager.GetUserAsync(User);
                 var name = user?.Name;
                 <a class="nav-link text-dark dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">@name</a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                if (user == null)
-                {
-                    await _signInManager.SignOutAsync();
-                }
-                else
-                {
-                    
                     <p class="dropdown-item custom-padding">MSSV: @user.Mssv</p>
                     <p class="dropdown-item custom-padding">Email: @user.Email</p> 
                     <a class="text-dark dropdown-item nav-link" asp-area="Identity" asp-page="/Account/Manage/ChangePassword" title="Manage" style="padding-left: 16px;">Đổi mật khẩu</a>
                     <form class="form-inline dropdown-item" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
                         <button type="submit" class="btn btn-link text-dark" style="padding: 0; text-decoration: none; width: 100%; margin-bottom: 0; text-align:left;">Logout</button>
                     </form>
-
-				}
 				</div>
             }
             
